# waifu2x-converter-cpp

./: .gitattributes  .gitignore  BUILDING.md  CMakeLists.txt  FORK_CHANGES.md  FindAMDCLConfig.cmake  FindCUDACLConfig.cmake  LICENSE  Makefile  Makefile.common  Makefile.linux  Makefile.w32  Makefile.w32-gcc  OpenCV_LICENSE  README.md  RunVS17Shell.bat  build-ALL-UNICODE.bat  build-ALL.bat  build-AMD-UNICODE.bat  build-AMD.bat  build-CUDA-UNICODE.bat  build-CUDA.bat  build-MINGW-ALL.bat  build-MINGW-AMD.bat  build.bat  cmake.bat  conv.c  dist.sh  rm.c  waifu2x-converter-cpp
.github/workflows/: w2x-runner.yml
appendix/: README-jp.md  allconv.sed  hints-jp.md  waifu2x-commented.py
appendix/waifu2x-nocuda/: waifu2x.lua
appendix/waifu2x-nocuda/lib/: pairwise_transform.lua  reconstruct.lua  settings.lua  srcnn.lua
dev_tools/: create_test_pngs.py
dists/: README.en  README.jp
docs/internals/: waifu2x.html
include/tclap/: tclap_LICEENSE.txt
old_files/: README.md
old_files/appendix/: hints-jp.md
old_files/appendix/waifu2x-nocuda/: export_model_nocuda.lua
old_files/appendix/waifu2x-nocuda/lib/: minibatch_adam.lua  settings.lua
src/: Buffer.cpp  Buffer.hpp  CLlib.h  CUDAlib.h  Env.cpp  Env.hpp  a.diff  common.cpp  common.hpp  compiler.h  convertRoutine.cpp  convertRoutine.hpp  cvwrap.cpp  cvwrap.hpp  filters.hpp  main.cpp  modelHandler.cpp  modelHandler.hpp  modelHandler_CUDA.cpp  modelHandler_CUDA.cu  modelHandler_OpenCL.cl  modelHandler_OpenCL.cpp  modelHandler_altivec.cpp  modelHandler_avx.cpp  modelHandler_avx_func.hpp  modelHandler_fma.cpp  modelHandler_neon.cpp  modelHandler_simd.hpp  modelHandler_simd_unroll1.hpp  modelHandler_simd_unroll2.hpp  modelHandler_simd_unroll4.hpp  modelHandler_simd_unroll5.hpp  modelHandler_sse.cpp  params.h  sec.hpp  tchar.h  test.cpp  threadPool.cpp  threadPool.hpp  tstring.cpp  (+5 more)
w32-apps/: Makefile  install.bat  install.js  runbench.c  runtest.c  uninstall.bat  uninstall.js  w2xc.c  w2xcr.c  w2xcr.h  w2xcr.rc
w32-apps/ExtendedSendTo/: .gitattributes  LICENSE  install.js  install.wsf  readme.txt  uninstall.js  uninstall.wsf  waifuExecuter.wsf
w32-apps/ExtendedSendTo/src/: icon.psd
